--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,22 @@
                -1px 1px 0 black, 1px 1px 0 black; /* Black outline */
   z-index: 1000; /* Ensure it’s above the canvas */
 }
+
+/* Prevent text selection */
+* {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Standard */
+}
+
+/* Prevent tap highlight on buttons and links */
+button, a {
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* Prevent long press menu and text selection */
+button, a, div {
+    -webkit-touch-callout: none; /* Disable callout (iOS) */
+}
+
